welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: illegal start of simple expression
	for(i <- 0 to 5);
                        ^